Улучшила читаемость кода

--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -3,7 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "23b68ded",
+   "id": "dabfecf9",
    "metadata": {},
    "source": [
     "<img src=\"photo_2022-10-14_21-31-44.jpg\" width=\"500\"/>"
@@ -12,19 +12,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1903554",
+   "id": "9c9fe07c",
    "metadata": {},
    "outputs": [],
    "source": [
     "SELECT * \n",
     "FROM apartments \n",
-    "WHERE price > (SELECT AVG(price) from apartments) and status = 'Not rented'\n",
+    "WHERE price > (SELECT AVG(price) from apartments) and \n",
+    "      status = 'Not rented'\n",
     "ORDER BY price;"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7675f5aa",
+   "id": "80b40f43",
    "metadata": {},
    "source": [
     "<img src=\"photo_2022-10-14_21-43-56.jpg\" width=\"500\"/>\n",
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89012aa1",
+   "id": "02556eb3",
    "metadata": {},
    "outputs": [],
    "source": [
